/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package android.express;

option java_package = "com.android.os.express";
option java_outer_classname = "ExpressConfigProto";
option java_multiple_files = true;

enum MetricUnit {
    UNIT_UNKNOWN = 0;
    UNIT_COUNT = 1;
}

enum MetricType {
    METRIC_TYPE_UNKNOWN = 0;
    COUNTER = 1;
    COUNTER_HISTOGRAM = 2;
}

enum BinningType {
    BINNING_TYPE_UNKNOWN = 0;
    BINS_WITH_FIXED_RANGE = 1;
    BINS_WITH_SCALED_FACTOR = 2;
}

message HistogramOptions {

    message FixedRangeBinningOptions {
        optional int32 bins_count = 1;
        optional float min_sample_value = 2;
        optional float max_sample_value = 3;
    }

    message ScaledFactorBinningOptions  {
        optional int32 bins_count = 1;
        optional float min_sample_value = 2;
        optional int32 first_bin_size = 3;
        optional float scale_factor = 4;
    }

    oneof options {
        FixedRangeBinningOptions fixed_range_binning_options = 1;
        ScaledFactorBinningOptions scaled_factor_binning_options = 2;
    }
}

message ExpressMetric {
    optional string id = 1;

    optional MetricType type = 2;

    optional string display_name = 3;

    optional string description = 4;

    repeated string owner_email = 5;

    optional MetricUnit unit = 6;

    oneof options {
        HistogramOptions histogram_options = 7;
    }
}

message ExpressMetricConfigFile {
    repeated ExpressMetric express_metric = 1;
}
