/*
 * Copyright (C) 2022 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package android.express;

option java_package = "com.android.os.express";
option java_outer_classname = "MetricInfoProto";
option java_multiple_files = true;

import "frameworks/proto_logging/stats/express/express_config.proto";

message MetricInfo {
    optional string id = 1;

    optional int64 hash = 2;

    optional MetricType type = 3;
}
